typewriter-test/tests/snapshots/typescript_tests__adjacent_enum_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.2.0. DO NOT EDIT.
// Source: Event
// Regenerate: cargo typewriter generate

export type Event =
  | { t: "click"; c: { x: number; y: number } }
  | { t: "key_press"; c: string }
  | { t: "resize" };
