typewriter-test/tests/snapshots/typescript_tests__adjacent_enum_zod_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.4.0. DO NOT EDIT.
// Source: Event
// Regenerate: cargo typewriter generate

import { z } from 'zod';

export const EventSchema = z.discriminatedUnion("t", [z.object({"t": z.literal("click"), "c": z.object({"x": z.number(), "y": z.number()})}), z.object({"t": z.literal("key_press"), "c": z.string()}), z.object({"t": z.literal("resize")})]);
