typewriter-test/tests/snapshots/typescript_tests__external_enum_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.2.0. DO NOT EDIT.
// Source: Shape
// Regenerate: cargo typewriter generate

/**
 * Geometric shape
 */
export type Shape =
  | { "Circle": { radius: number } }
  | { "Rectangle": { width: number; height: number } }
  | { "Point": {} };
