typewriter-test/tests/snapshots/typescript_tests__external_enum_zod_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.3.0. DO NOT EDIT.
// Source: Shape
// Regenerate: cargo typewriter generate

import { z } from 'zod';

/**
 * Geometric shape
 */
export const ShapeSchema = z.union([z.object({"Circle": z.object({"radius": z.number()})}), z.object({"Rectangle": z.object({"width": z.number(), "height": z.number()})}), z.object({"Point": z.object({})})]);
