typewriter-test/tests/snapshots/typescript_tests__generic_struct_zod_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.3.0. DO NOT EDIT.
// Source: Pagination
// Regenerate: cargo typewriter generate

import { z } from 'zod';

/**
 * Paginated response
 */
export const PaginationSchema = <TSchema extends z.ZodTypeAny>(tSchema: TSchema) => z.object({"items": z.array(tSchema), "total": z.bigint()});
