typewriter-test/tests/snapshots/typescript_tests__readonly_struct_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.4.1. DO NOT EDIT.
// Source: Config
// Regenerate: cargo typewriter generate

export interface Config {
  readonly name: string;
  readonly value: number;
}
