typewriter-test/tests/snapshots/typescript_tests__self_reference_and_cross_imports_zod_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.4.1. DO NOT EDIT.
// Source: Node
// Regenerate: cargo typewriter generate

import { z } from 'zod';
import { PaginationSchema } from './pagination.schema';
import { UserProfileSchema } from './user-profile.schema';

export const NodeSchema = z.object({"id": z.string(), "next": z.lazy(() => NodeSchema).optional(), "user": z.lazy(() => UserProfileSchema), "page": z.lazy(() => PaginationSchema(z.lazy(() => UserProfileSchema)))});
