typewriter-test/tests/snapshots/typescript_tests__simple_enum_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.4.0. DO NOT EDIT.
// Source: Role
// Regenerate: cargo typewriter generate

export type Role =
  | "Admin"
  | "User"
  | "Guest";
