typewriter-test/tests/snapshots/typescript_tests__simple_struct_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.3.1. DO NOT EDIT.
// Source: UserProfile
// Regenerate: cargo typewriter generate

import type { UserRole } from './user-role';

/**
 * User profile information
 */
export interface UserProfile {
  /** Unique identifier */
  id: string;
  email: string;
  age?: number | undefined;
  role: UserRole;
  createdAt: string;
}
