typewriter-test/tests/snapshots/typescript_tests__simple_struct_zod_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.4.1. DO NOT EDIT.
// Source: UserProfile
// Regenerate: cargo typewriter generate

import { z } from 'zod';
import { UserRoleSchema } from './user-role.schema';

/**
 * User profile information
 */
export const UserProfileSchema = z.object({"id": z.string(), "email": z.string(), "age": z.number().optional(), "role": z.lazy(() => UserRoleSchema), "createdAt": z.string()});
