typewriter-test/tests/snapshots/typescript_tests__struct_with_collections_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.3.0. DO NOT EDIT.
// Source: ApiResponse
// Regenerate: cargo typewriter generate

import type { Item } from './item';

export interface ApiResponse {
  items: Item[];
  metadata: Record<string, unknown>;
  coordinates: [number, number];
}
