typewriter-test/tests/snapshots/typescript_tests__tagged_enum_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.1.2. DO NOT EDIT.
// Source: PaymentStatus 
// Regenerate: cargo typewriter generate

/**
 * Payment processing status
 */
export type PaymentStatus =
  | { type: "pending" }
  | { type: "completed"; transaction_id: string }
  | { type: "failed"; reason: string; code: number };
